--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     /* 上半部分 */
     .hero {
       position: relative;
-      flex: 1;                /* 占据可用空间的一半 */
+      flex: 1.5;                /* 占据可用空间的一半 */
       min-height: 25vh;       /* 至少 25% 视窗高度 */
       display: flex;
       align-items: center;
@@ -42,7 +42,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: url('你的图片地址.jpg') no-repeat center/cover;
+      background: url('https://raw.githubusercontent.com/Shunpower/shunpower.github.io/refs/heads/main/background.jpg') no-repeat center/cover;
       opacity: 0.5;
       z-index: 0;
     }
