modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>示例静态页</title>
+  <title>262144 次反拍</title>
   <style>
     /* 全页重置和排版 */
     * {
@@ -30,7 +30,8 @@
       flex: 1.5;                /* 占据可用空间的一半 */
       min-height: 25vh;       /* 至少 25% 视窗高度 */
       display: flex;
-      align-items: center;
+      align-items: flex-end;
+      padding-bottom: 20px;
       justify-content: center;
       text-align: left;
       color: white;
@@ -42,7 +43,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: url('https://raw.githubusercontent.com/Shunpower/shunpower.github.io/refs/heads/main/background.jpg') no-repeat center/cover;
+      background: url('https://raw.githubusercontent.com/Shunpower/shunpower.github.io/refs/heads/main/background.jpg') no-repeat top center/cover;
       opacity: 0.5;
       z-index: 0;
     }
@@ -58,7 +59,7 @@
       z-index: 1;
     }
     .hero .title {
-      font-size: 3rem;
+      font-size: 7rem;
       line-height: 1.2;
       font-weight: bold;
       width: 50%;
@@ -117,10 +118,10 @@
     <header class="hero">
       <div class="text">
         <div class="title">
-          这是页面的主标题
+          262144 次反拍
         </div>
         <div class="subtitle">
-          这里是简要的介绍文字，用灰色小字展示，你可以在这里写一段 2-3 行的描述，概括页面的用途或主题。
+          该企划由<a href="https://www.weibo.com/u/7607032128" target="_blank">顺式还原剂</a>在张峻豪 18 岁生日时发起，旨在维护张峻豪相关算法竞赛题集，以张峻豪的名义为算法竞赛添砖加瓦。
         </div>
       </div>
     </header>
