modified:   background.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
     }
 
     .links-list .desc { font-size: 0.9rem; color: #666; line-height: 1.4; }
+
+    .samplelinks a {
+      display: inline-block;
+      font-size: 1.2rem;
+      color: #0366d6;
+      text-decoration: none;
+      margin-bottom: 6px;
+      padding: 4px 8px;
+      border-radius: 4px;
+      transition: background .2s, color .2s;
+    }
   </style>
 </head>
 <body>
@@ -83,12 +94,14 @@
   <div class="container">
 
     <!-- 上半部分：背景图 + 标题 + 简介 -->
-    <header class="hero">
-      <div class="text">
-        <div class="title">262144 次反拍</div>
-        <div class="subtitle">该企划由<a href="https://www.weibo.com/u/7607032128" target="_blank">顺式还原剂</a>在张峻豪 18 岁生日时发起，旨在维护张峻豪相关算法竞赛题集，以张峻豪的名义为算法竞赛添砖加瓦。</div>
-      </div>
-    </header>
+    <section class="samplelinks">
+        <header class="hero">
+        <div class="text">
+            <div class="title">262144 次反拍</div>
+            <div class="subtitle">该企划由<a href="https://www.weibo.com/u/7607032128" target="_blank">顺式还原剂</a>在张峻豪 18 岁生日时发起，旨在维护张峻豪相关算法竞赛题集，以张峻豪的名义为算法竞赛添砖加瓦。</div>
+        </div>
+        </header>
+    </section>
 
     <!-- 下半部分：链接列表 -->
     <section class="links-section">
