--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     /* 上半部分 */
     .hero {
       position: relative;
-      flex: 2;
+      flex: 0.5;
       min-height: 25vh;
       display: flex;
       justify-content: center;
@@ -79,13 +79,13 @@
 
     .samplelinks a {
       display: inline-block;
-      font-size: 1.2rem;
+      font-size: 1rem;
       color: #0366d6;
       text-decoration: none;
-      margin-bottom: 6px;
+      /* margin-bottom: 6px;
       padding: 4px 8px;
       border-radius: 4px;
-      transition: background .2s, color .2s;
+      transition: background .2s, color .2s; */
     }
   </style>
 </head>
