modified:   index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       z-index: 1;
     }
     .hero .title { font-size: 4rem; line-height: 1.2; font-weight: bold; width: 50%; }
-    .hero .subtitle { font-size: 1rem; color: #ccc; width: 40%; line-height: 1.5; }
+    .hero .subtitle { font-size: 1rem; color: white; width: 40%; line-height: 1.5; }
 
     /* 下半部分 */
     .links-section { background: white; padding: 40px 20px; height: 60vh; flex: none; overflow-y: auto; }
@@ -63,7 +63,7 @@
     .links-list a {
       display: inline-block;
       font-size: 1.2rem;
-      color: #0366d6;
+      color: #fb8ef5;
       text-decoration: none;
       margin-bottom: 6px;
       padding: 4px 8px;
@@ -72,7 +72,7 @@
     }
     /* 悬停效果 */
     .links-list a:hover {
-      background-color: #0366d6;
+      background-color: #fb8ef5;
       color: #fff;
     }
 
@@ -81,13 +81,19 @@
     .samplelinks a {
       display: inline-block;
       font-size: 1rem;
-      color: #0366d6;
+      color: #497ce9;
       text-decoration: none;
       /* margin-bottom: 6px;
       padding: 4px 8px;
       border-radius: 4px;
       transition: background .2s, color .2s; */
     }
+    
+    .samplelinks a:hover {
+      color: white;
+    }
+
+    .links-list .desc { font-size: 0.9rem; color: #666; line-height: 1.4; }
   </style>
 </head>
 <body>
@@ -111,6 +117,7 @@
           <a href="https://example.com/link1" target="_blank">示例链接 1</a>
           <div class="desc">这里是对示例链接 1 的简短介绍。</div>
         </li>
+        <center>分类标题</center>
         <li>
           <a href="https://example.com/link2" target="_blank">示例链接 2</a>
           <div class="desc">这里是对示例链接 2 的简短介绍。</div>
@@ -119,6 +126,7 @@
           <a href="https://example.com/link3" target="_blank">示例链接 3</a>
           <div class="desc">这里是对示例链接 3 的简短介绍。</div>
         </li>
+        <center>分类标题</center>
         <li>
           <a href="https://example.com/link1" target="_blank">示例链接 1</a>
           <div class="desc">这里是对示例链接 1 的简短介绍。</div>
