--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>示例静态页</title>
+  <title>262144 次反拍</title>
   <style>
     /* 全页重置和排版 */
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -105,7 +105,7 @@
         <header class="hero">
         <div class="text">
             <div class="title">262144 次反拍</div>
-            <div class="subtitle">该企划由<a href="https://www.weibo.com/u/7607032128" target="_blank">顺式还原剂</a>在张峻豪 18 岁生日时发起，旨在维护张峻豪相关算法竞赛题集，以张峻豪的名义为算法竞赛添砖加瓦。</div>
+            <div class="subtitle">该企划由<a href="https://www.weibo.com/u/7607032128" target="_blank">顺式还原剂</a>在张峻豪 18 岁生日时发起，旨在维护张峻豪相关算法竞赛题集。</div>
         </div>
         </header>
     </section>
@@ -117,7 +117,8 @@
           <a href="https://example.com/link1" target="_blank">示例链接 1</a>
           <div class="desc">这里是对示例链接 1 的简短介绍。</div>
         </li>
-        <center>分类标题</center>
+        <center><h2>六个最珍贵的瞬间</h2></center>
+        <HR style= " border: 1 dashed #987cb9" width ="100%" color =#987cb9 SIZE = 1>
         <li>
           <a href="https://example.com/link2" target="_blank">示例链接 2</a>
           <div class="desc">这里是对示例链接 2 的简短介绍。</div>
@@ -126,7 +127,8 @@
           <a href="https://example.com/link3" target="_blank">示例链接 3</a>
           <div class="desc">这里是对示例链接 3 的简短介绍。</div>
         </li>
-        <center>分类标题</center>
+        <center><h2>SHUN@Prologue</h2></center>
+        <HR style= " border: 1 dashed #987cb9" width ="100%" color =#987cb9 SIZE = 1>
         <li>
           <a href="https://example.com/link1" target="_blank">示例链接 1</a>
           <div class="desc">这里是对示例链接 1 的简短介绍。</div>
