--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     /* 上半部分 */
     .hero {
       position: relative;
-      height: 33vh;
+      height: 30vh;
       flex: none;
-      min-height: 25vh;
+      min-height: 15vh;
       display: flex;
       justify-content: center;
       align-items: flex-end;
@@ -58,7 +58,7 @@
     }
 
     /* 下半部分 */
-    .links-section { background: white; padding: 40px 20px; height: 67vh; flex: none; overflow-y: auto; }
+    .links-section { background: white; padding: 40px 20px; height: 65vh; flex: none; overflow-y: auto; }
     .links-list { list-style: none; width: 50vw; margin: 0 auto; display: flex; flex-direction: column; gap: 20px; }
     .links-list li {
       display: flex;
@@ -117,10 +117,43 @@
     .samplelinks a:hover {
       color: white;
     }
+
+    .footer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: #f5f5f5;
+      height: 5vh;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex: none;
+      padding: 0 20px;
+    }
+    .signature { font-size: 0.9rem; color: #666; }
+    .friend-links a {
+      margin-left: 15px;
+      font-size: 1rem;
+      color: #497ce9;
+      text-decoration: none;
+    }
+    .friend-links a:hover { color: #3969d0; }
+      /* 给友情链接前面加图标 */
+      .friend-links a {
+        display: inline-flex;
+        align-items: center;
+      }
+      .friend-links .friend-icon {
+        width: 16px;
+        height: 16px;
+        margin-right: 6px;
+        vertical-align: middle;
+      }
   </style>
 </head>
 <body>
-
+  
   <div class="container">
 
     <!-- 上半部分：背景图 + 标题 + 简介 -->
@@ -198,6 +231,24 @@
       </section>
     </div>
   </div>
-
+  <footer class="footer">
+    <div class="signature">May the force be with you and me. powered by SHUN_Reductant, 2025</div>
+    <div class="friend-links">
+          <a href="https://www.weibo.com/u/7635971784" target="_blank">
+            <img src="/weibo_icon.png" alt="" class="friend-icon">
+            张峻豪
+          </a>
+      
+          <a href="https://www.weibo.com/u/7481905399" target="_blank">
+            <img src="/weibo_icon.png" alt="" class="friend-icon">
+            张峻豪的庄园助手
+          </a>
+          
+          <a href="https://www.weibo.com/u/7607032128" target="_blank">
+            <img src="/weibo_icon.png" alt="" class="friend-icon">
+            顺式还原剂
+          </a>
+    </div>
+  </footer>
 </body>
 </html>
