fixed footer in the adaptation for small screen

--- a/index.html
+++ b/index.html
@@ -308,10 +308,11 @@
 			/* 页脚多行布局，去掉固定高度 */
 			.footer {
 				position: fixed;
+				bottom: 0;
 				flex-direction: column;
 				align-items: center;
 				padding: 10px;
-				height: 8vh;
+				height: auto;
 			}
 
 			.signature {
