--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 					</li>
 					<li>
 						<linest>• </linest>
-						<a href="#link2">SHUN@Prologue</a>
+						<a href="#link2">专辑 SHUN@Prologue</a>
 					</li>
 					<li>
 						<linest>• </linest>
