--- a/index.html
+++ b/index.html
@@ -244,11 +244,56 @@
 			vertical-align: middle;
 		}
 
+		.friend-links li{
+			display: flex;
+		}
+
+		.friend-links li+li{
+			margin-top: 5px;
+		}
+
+		/* Offcanvas friend-links sidebar */
+        #offcanvas-friends {
+            position: fixed;
+            top: 0;
+            right: -80%;
+            width: 80%;
+            max-width: 300px;
+            height: 100%;
+            background: #f5f5f5;
+            box-shadow: -2px 0 8px rgba(0,0,0,0.2);
+            transition: right 0.3s ease;
+            z-index: 9990;
+            padding: 20px;
+            overflow-y: auto;
+        }
+        #offcanvas-friends.open {
+			right: 0;
+		}
+        #friend-toggle-btn {
+			display: none;
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            background: none;
+            border: none;
+            z-index: 9999;
+            cursor: pointer;
+        }
+        #friend-toggle-btn img { 
+			width: 30px;
+			height: 30px; 
+			filter: invert(100%);
+		}
+		#friend-toggle-btn.open img{
+			transition: filter 0.3s;
+			filter: invert(0%);
+		}
 		@media (max-width: 1200px) {
 
 			/* hero区文字堆叠，字号缩小 */
 			.hero {
-				height: 20vh;
+				height: 25vh;
 			}
 
 			.hero .text {
@@ -285,7 +330,7 @@
 				border-bottom: 1px solid #e0e0e0;
 				padding-bottom: 10px;
 				margin-bottom: 10px;
-				height: 20vh;
+				height: 30vh;
 			}
 
 			.links-section {
@@ -304,29 +349,14 @@
 			.links-list li {
 				padding: 8px 10px;
 			}
-
-			/* 页脚多行布局，去掉固定高度 */
 			.footer {
-				position: fixed;
-				bottom: 0;
-				flex-direction: column;
-				align-items: center;
-				padding: 10px;
-				height: auto;
+				display: none;
 			}
-
-			.signature {
-				margin-bottom: 8px;
+			.signature{
+				margin-top: 10px;
 			}
-
-			.friend-links {
-				display: flex;
-				flex-wrap: wrap;
-				justify-content: center;
-			}
-
-			.friend-links a {
-				margin: 5px 10px;
+            #friend-toggle-btn { 
+				display: block;
 			}
 		}
 	</style>
@@ -347,6 +377,21 @@
 			</header>
 		</section>
 
+		<button id="friend-toggle-btn" aria-label="Toggle Friend Links"><img src="/friend_icon.png" alt="友链"></button>
+
+        <!-- Offcanvas Friend Links -->
+        <nav id="offcanvas-friends">
+            <ul class="friend-links">
+				<br></br>
+				<li><a href="https://www.weibo.com/u/7635971784" target="_blank"><img src="/weibo_icon.png" alt="" class="friend-icon">张峻豪</a></li>
+                <li><a href="https://www.weibo.com/u/7481905399" target="_blank"><img src="/weibo_icon.png" alt="" class="friend-icon">张峻豪的庄园助手</a></li>
+                <li><a href="https://www.weibo.com/u/7607032128" target="_blank"><img src="/weibo_icon.png" alt="" class="friend-icon">顺式还原剂</a></li>
+				<div class="signature">
+					May the force be with you and me.
+					powered by SHUN_Reductant, 2025
+				</div>
+			</ul>
+        </nav>
 
 		<div class="content">
 			<nav class="sidebar">
@@ -437,6 +482,13 @@
 			</a>
 		</div>
 	</footer>
+	
+    <script>
+        document.getElementById('friend-toggle-btn').addEventListener('click', function() {
+            document.getElementById('offcanvas-friends').classList.toggle('open');
+            document.getElementById('friend-toggle-btn').classList.toggle('open');
+        });
+    </script>
 </body>
 
 </html>
